# aiopicks

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aiopicks/: __init__.py  __main__.py
app/: __init__.py  config.py  database.py  db_models.py  discovery.py  main.py  models.py  stable_catalogs.py  utils.py  web.py
app/services/: catalog_generator.py  cinemeta.py  metadata_addon.py  openai.py  openrouter.py  tmdb.py  trakt.py
tests/: conftest.py  test_catalog_service.py  test_database.py  test_manifest.py  test_metadata_addon.py  test_models.py  test_openrouter.py  test_repository_integrity.py  test_settings.py  test_trakt.py  test_trakt_client.py  test_trakt_oauth.py  test_utils.py
